--- a/iframe.html
+++ b/iframe.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="component" style="position: relative;">
-    <iframe src="https://ivallejo-infobae.github.io/slide-diputaciones/" title="Mapa Histórico por Diputaciones por Partido" frameborder="0" marginwidth="0" marginheight="0" scrolling="yes" style=" position: absolute; top: 0; left: 0; display: block; width: 100%; height: 100%; border: none"></iframe>
+    <iframe src="https://ivallejo-infobae.github.io/aguililla-galeria-terror/" title="Mapa Histórico por Diputaciones por Partido" frameborder="0" marginwidth="0" marginheight="0" scrolling="yes" style=" position: absolute; top: 0; left: 0; display: block; width: 100%; height: 100%; border: none"></iframe>
     <style>
       .component {
         min-height: 500px;
@@ -17,7 +17,7 @@
     </style>
     <style media="screen and (min-width:768px)">
       .component {
-        min-height: 900px;
+        min-height: 800px;
       }
     </style>
   </div>
