add title to slide

--- a/dev/html-dev/index-dev.html
+++ b/dev/html-dev/index-dev.html
@@ -3,12 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Aguililla: galeria del terror</title>
+  <title>Aguililla: galería del terror</title>
   <link rel="stylesheet" href="css/resources.min.css">
   <link rel="stylesheet" href="css/styles.min.css">
 </head>
 <body>
   <div class="wrap-component">
+    <div class="wrap-title">
+      <h1>Aguililla: galería del terror</h1>
+    </div>
     <div class="wrap-slider">
       <div id="slide-maps" class="owl-carousel slider">
         <div class="slider__item">
